# driftlens

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/demo/: sanitized-steam-appdetails.md
docs/integration/: scheduled-ingestion-diagnostics.md
docs/runbook/: agent-workflow.md  documentation-inventory.md  documentation-style.md  ticket-template.md
driftlens/: cli.py  detect.py
driftlens/llm/: __init__.py  errors.py  mock.py  openai_compatible.py  representative.py  types.py
driftlens/reports/: __init__.py  markdown.py
driftlens/schema/: diff.py  extractor.py  hash.py  severity.py  severity_summary.py  types.py
driftlens/storage/: artifacts.py
examples/sanitized-steam-appdetails/: current.json  previous.json
scripts/: check-llm.sh  check-package.sh  check.sh
tests/: test_cli.py  test_detect.py  test_llm_mock.py  test_llm_openai_compatible.py  test_report_markdown.py  test_schema_diff.py  test_schema_extractor.py  test_schema_hash.py  test_schema_severity.py  test_schema_severity_summary.py  test_storage_artifacts.py
tests/fixtures/: product_catalog_v1.json  product_catalog_v2.json  steam_appdetails_arrays_v1.json  steam_appdetails_nested_v1.json  steam_appdetails_v1.json
