[project]
name = "driftlens"
version = "0.1.0"
description = "Local-first schema drift monitor for JSON ingestion pipelines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
