[project]
name = "driftlens"
version = "0.1.0"
description = "Local-first schema drift monitor for JSON ingestion pipelines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.20.0",
]

[project.scripts]
driftlens = "driftlens.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = true
